Fix large screen hero not showing correctlyin chrome

--- a/sass/components/content/_posts-and-pages.scss
+++ b/sass/components/content/_posts-and-pages.scss
@@ -13,7 +13,7 @@
 
 	@include desktop {
 		background-position: left center;
-		align-items: end;
+		align-items: flex-end;
 	}
 }
 
